# haskell-book-exercises

./: .gitignore  LICENSE  README.md  haskell-first-principles.cabal  stack.yaml
app/: Main.hs
src/ch10/exercises/: chapterExercises.hs  dbProcessing.hs  scansExercises.hs
src/ch10/practice/: scanFib.hs
src/ch11/exercises/: asPatterns.hs  huttonsRazor.hs  languageExercises.hs  logicGoats.hs  phone.hs  pityTheBool.hs  programmers.hs  trees.hs  typeVsData.hs  vigenere.hs
src/ch11/practice/: accidentalBottoms.hs  avoidingBottoms.hs  books.hs  constructingDeconstructing.hs  dataConstructorArities.hs  dataConstructorsAndValues.hs  deconstructingValues.hs  exponentialFunctionType.hs  higherKinded.hs  newtype.hs  normalForm.hs  records.hs
src/ch12/exercises/: chapterExercises.hs
src/ch12/practice/: person.hs  whyBother.hs
src/ch13/exercises/: cipherWithInput.hs  exit.hs  name.hs
src/ch13/practice/hello/hangman/: hangman.cabal
src/ch13/practice/hello/hangman/.stack-work/ghci/3062fed2/: cabal_macros.h
src/ch13/practice/hello/hangman/.stack-work/install/x86_64-linux-tinfo6/lts-13.26/8.6.5/flag-cache/: random-1.1-3ypV4EIycgb35PKjTYYr5q  split-0.2.3.3-6n1iQ0JLFvkeXvJXsAqQc
src/ch13/practice/hello/hangman/data/: dict.txt
src/ch13/practice/hello/hangman/src/: Main.hs
src/ch14/: Addition.hs  ChangeLog.md  Hangman.hs  LICENSE  ch14.cabal  testingCiphers.hs  testingHangman.hs  usingQC.hs  wordNumberTest.hs
src/ch14/exercises/: Chapter14Exercises.hs
src/ch14/morse/: wordNumberTest.hs
src/ch15/exercises/: ChapterExercises.hs  (+2 more)
src/ch4/: moodSwing.hs
(+188 files in other folders)
