name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Karan Kumar
maintainer:          example@example.com
-- copyright:           2019 Author name here
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010
